[gd_scene load_steps=13 format=2]

[ext_resource path="res://levels/level1/Level1.gd" type="Script" id=1]
[ext_resource path="res://gui/towerselectmenu/TowerSelectMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/level1/MapAreas.tscn" type="PackedScene" id=3]
[ext_resource path="res://levels/level1/MapArea.gd" type="Script" id=4]
[ext_resource path="res://gui/towerpanel/TowerPanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://gui/gamegui/GameGUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://levels/level1/MapSprite.tscn" type="PackedScene" id=8]
[ext_resource path="res://levels/level1/Cursor.gd" type="Script" id=11]
[ext_resource path="res://gui/mouse.png" type="Texture" id=12]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_intensity = 1.2
glow_strength = 0.8
glow_blend_mode = 1
glow_bicubic_upscale = true
adjustment_brightness = 0.7
adjustment_contrast = 1.3

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 640, 360 )

[sub_resource type="CircleShape2D" id=3]
radius = 90.0

[node name="Level1" type="Node"]
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 640, 360 )
current = true

[node name="MusicTheme" type="AudioStreamPlayer" parent="."]

[node name="Map" type="Area2D" parent="." groups=[
"map",
]]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map"]
visible = false
position = Vector2( 640, 360 )
shape = SubResource( 2 )

[node name="Areas" parent="Map" instance=ExtResource( 3 )]

[node name="MapSprite" parent="Map" instance=ExtResource( 8 )]

[node name="Towers" type="Node" parent="."]

[node name="Control" type="Node2D" parent="."]
z_index = 3

[node name="TowerSelectMenu" parent="Control" instance=ExtResource( 2 )]
visible = false

[node name="TowerPanel" parent="Control" instance=ExtResource( 6 )]
visible = false
position = Vector2( 1280, 0 )

[node name="Cursor" type="Area2D" parent="Control"]
collision_layer = 32
collision_mask = 25
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/Cursor"]
scale = Vector2( 0.4, 0.4 )
shape = SubResource( 3 )

[node name="CursorSprite" type="Sprite" parent="Control/Cursor"]
modulate = Color( 1, 1, 1, 0.588235 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 12 )

[node name="Tween" type="Tween" parent="Control/Cursor"]
repeat = true
playback/repeat = true

[node name="GameGUI" parent="Control" instance=ExtResource( 7 )]

[node name="Tweens" type="Node" parent="."]

[node name="TweenG" type="Tween" parent="Tweens"]

[node name="TweenR" type="Tween" parent="Tweens"]

[node name="Tween" type="Tween" parent="Tweens"]
[connection signal="input_event" from="Map" to="Map" method="_on_Map_input_event"]
[connection signal="tween_all_completed" from="Tweens/TweenG" to="." method="_on_TweenG_tween_all_completed"]
[connection signal="tween_all_completed" from="Tweens/TweenR" to="." method="_on_TweenR_tween_all_completed"]
